--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.0",
+    "i18next": "^21.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.5",
     "react-icons": "^4.4.0",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
